--- a/s4t-pt-2022-pedagotris/index.html
+++ b/s4t-pt-2022-pedagotris/index.html
@@ -45,8 +45,8 @@
                 <br><b>En informatique les mots tri et trier sont à prendre avec le sens de classement et classer.</b>
             </p>
         </div>
-        <div id="contributeurs" class="text-left mx-5 mt-10 w-full pr-10">Contributeurs : <b>BARAT Hugo, GARBARINO Teo, GILIBERTO Nicolas, GULASIN-TRIAY Michel, MOU-MEN Amir, QUEYSSELIER Timothé, TATOPOULOS Floran</b></div>
-        <div id="contributeurs" class="text-right mx-5 mt-10 w-full pr-10">Projet encadré par <b>REY Gaetan, DARTIGUES-PALLEZ Christel</b></div>
+        <div id="contributeurs" class="absolute top-[140vh] 2xl:top-[93vh] text-left mx-5 mt-10 w-full pr-10">Contributeurs : <b>BARAT Hugo, GARBARINO Teo, GILIBERTO Nicolas, GULASIN-TRIAY Michel, MOU-MEN Amir, QUEYSSELIER Timothé, TATOPOULOS Floran</b></div>
+        <div id="contributeurs" class="absolute top-[150vh] 2xl:top-[93vh] text-right mx-5 mt-10 w-full pr-10">Projet encadré par <b>REY Gaetan, DARTIGUES-PALLEZ Christel</b></div>
     </div>
 
 
